--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,12 @@
 </main>
-<div>
-<footer>
-    <p>Copyright © <%= new Date().getFullYear() %></p>
-</footer>
+<div class="container">
+<footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="https://www.linkedin.com/in/emre-karamahmut/" class="nav-link px-2 text-body-secondary">Linkedn</a></li>
+      <li class="nav-item"><a href="https://www.ingeniumyazilim.com/" class="nav-link px-2 text-body-secondary">Ingenium</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">© <%= new Date().getFullYear() %> Karam</p>
+  </footer>
 </div>
 </body>
 </html>
