--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,33 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <title>To-Do List Application</title>
   </head>
   <nav>
     <div class="container">
-      <a class="navbar-brand" href="/">made by Emre Karamahmut</a>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a id="navW" class="nav-link active" href="/">Work</a>
-        </li>
-        <li class="nav-item">
-          <a id="navD" class="nav-link" href="/daily">Daily</a>
-        </li>
-      </ul>
+      <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a id="navW" href="/" class="nav-link active">Work</a>
+          </li>
+          <li class="nav-item">
+            <a id="navD" href="/daily" class="nav-link">Daily</a>
+          </li>
+        </ul>
+      </header>
     </div>
   </nav>
   <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
+      $(function () {
         var currentPageUrl = window.location.pathname;
-        var navW = document.getElementById("navW");
-        var navD = document.getElementById("navD");
-        if (currentPageUrl === "/") {
-          navW.classList.add("active");
-          navD.classList.remove("active");
-        } else if (currentPageUrl === "/daily") {
-          navW.classList.remove("active");
-          navD.classList.add("active");
-        }
+        $("#navW").toggleClass("active", currentPageUrl === "/");
+        $("#navD").toggleClass("active", currentPageUrl === "/daily");
       });
     </script>
+  </body>
+</html>
